--- a/00_libft/Makefile
+++ b/00_libft/Makefile
@@ -6,13 +6,14 @@
 #    By: yuknakas <yuknakas@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/17 14:57:32 by yuknakas          #+#    #+#              #
-#    Updated: 2025/01/17 15:11:23 by yuknakas         ###   ########.fr        #
+#    Updated: 2025/02/10 14:50:26 by yuknakas         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CC			=	cc
-CFLAGS		=	-Wall -Wextra -Werror
-NAME		=	libft.a
+CCW			=	cc -Wall -Wextra -Werror
+NAME_LIBFT	=	libft.a
+NAME_GNL	=	libgnl.a
+NAME_GNL_BON=	libgnl_bon.a
 
 CTYPE		=	ctype/ft_isalnum.c ctype/ft_isalpha.c ctype/ft_isascii.c ctype/ft_isdigit.c \
 				ctype/ft_isprint.c ctype/ft_tolower.c ctype/ft_toupper.c
@@ -28,37 +29,50 @@ STRING		=	string/ft_split.c string/ft_strchr.c string/ft_strdup.c string/ft_stri
 				string/ft_strmapi.c string/ft_strncmp.c string/ft_strnstr.c string/ft_strrchr.c \
 				string/ft_strtrim.c string/ft_substr.c
 
+GNL_SRCS	=	gnl/get_next_line.c
+GNL_BON_SRCS=	gnl/get_next_line_bonus.c
+
 SRCS_MAN	=	$(CTYPE) $(FD) $(MEMORY) $(STDLIB) $(STRING)
 SRCS_BON	=	$(LST)
 OBJS_MAN	=	$(SRCS_MAN:%.c=%.o)
 OBJS_BON	=	$(SRCS_BON:%.c=%.o)
-OBJS		=	$(OBJS_MAN) $(OBJS_BON)
+OBJS_GNL	=	$(GNL_SRCS:%.c=%.o)
+OBJS_GNL_BON=	$(GNL_BON_SRCS:%.c=%.o)
+OBJS		=	$(OBJS_MAN) $(OBJS_BON) $(OBJS_GNL) $(OBJS_GNL_BON)
 BONUS_FLAG	=	.bonus_flag
 
-all: $(NAME)
+all: libft gnl gnl_bon libft_bonus
 
-$(NAME): $(OBJS_MAN)
-	@ar rcs $(NAME) $(OBJS_MAN)
-	@echo "> make all executed"
+libft: $(OBJS_MAN)
+	@ar rcs $(NAME_LIBFT) $(OBJS_MAN)
+	@echo "> make libft executed in 00_libft"
+
+gnl: libft $(OBJS_GNL)
+	@ar rcs $(NAME_GNL)	$(OBJS_GNL) $(NAME_LIBFT)
+	@echo "> make gnl executed in 00_libft"
+
+gnl_bon: libft $(OBJS_GNL_BON)
+	@ar rcs $(NAME_GNL_BON)	$(OBJS_GNL_BON) $(NAME_LIBFT)
+	@echo "> make gnl_bon executed in 00_libft"
 
 %.o: %.c
-	@$(CC) $(CFLAGS) -c $< -o $@
+	@$(CCW) -c $< -o $@
 
-bonus: $(BONUS_FLAG)
+libft_bonus: $(BONUS_FLAG)
 
 $(BONUS_FLAG): $(OBJS_MAN) $(OBJS_BON)
-	@ar rcs $(NAME) $(OBJS_BON)
+	@ar rcs $(NAME_LIBFT) $(OBJS_BON)
 	@touch $(BONUS_FLAG)
-	@echo "> make bonus executed"
+	@echo "> make libft_bonus executed in 00_libft"
 
 clean:
 	@rm -f $(OBJS) $(BONUS_FLAG)
-	@echo "> make clean executed"
+	@echo "> make clean executed in 00_libft"
 
 fclean: clean
-	@rm -f $(NAME)
-	@echo "> make fclean executed"
+	@rm -f $(NAME_LIBFT) $(NAME_GNL) $(NAME_GNL_BON)
+	@echo "> make fclean executed in 00_libft"
 
 re: fclean all
 
-.PHONY: all bonus clean fclean re
+.PHONY: all bonus gnl gnl_bon clean fclean re
